Fix select 2 inline form. - having a wrapper with form-inline class must auto align all fields in a single profile row. http://getbootstrap.com/css/#forms-inline

--- a/themes/templates/default.css
+++ b/themes/templates/default.css
@@ -243,7 +243,6 @@
 /* decoratives */
 .form-group {
     display: inline-block;
-    width: 100%;
 }
 
 .no-shadow {
@@ -681,7 +680,7 @@ dl, dt, dd {
 
 /* Parse Users */
 .user-tooltip { width: 250px; padding-bottom: 10px; }
-
+.form-inline > .form-group { width: auto !important; }
 table {
     font-size: 100%;
 }
